--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "firebase": "^10.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
