--- a/manifest.json
+++ b/manifest.json
@@ -4,26 +4,14 @@
   "description": "La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.",
   "icons": [
     {
-      "src": "https://i.postimg.cc/gJHg44fB/Reserva-Sala-Telecom.jpg",
-      "type": "image/jpeg",
+      "src": "https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png",
+      "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.postimg.cc/gJHg44fB/Reserva-Sala-Telecom.jpg",
-      "type": "image/jpeg",
-      "sizes": "512x512",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://i.postimg.cc/ZnKqNd56/Image-To-Stl-com-Reserva-Sala-Telecom.webp",
-      "type": "image/webp",
-      "sizes": "192x192",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://i.postimg.cc/ZnKqNd56/Image-To-Stl-com-Reserva-Sala-Telecom.webp",
-      "type": "image/webp",
+      "src": "https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png",
+      "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
     }
