--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "esbuild index.tsx --bundle --outfile=dist/bundle.js --define:process.env.NODE_ENV='\"production\"' --define:process.env.EMAILJS_SERVICE_ID='\"$EMAILJS_SERVICE_ID\"' --define:process.env.EMAILJS_TEMPLATE_ID='\"$EMAILJS_TEMPLATE_ID\"' --define:process.env.EMAILJS_PUBLIC_KEY='\"$EMAILJS_PUBLIC_KEY\"' --define:process.env.FIREBASE_API_KEY='\"$FIREBASE_API_KEY\"' --define:process.env.FIREBASE_AUTH_DOMAIN='\"$FIREBASE_AUTH_DOMAIN\"' --define:process.env.FIREBASE_PROJECT_ID='\"$FIREBASE_PROJECT_ID\"' --define:process.env.FIREBASE_STORAGE_BUCKET='\"$FIREBASE_STORAGE_BUCKET\"' --define:process.env.FIREBASE_MESSAGING_SENDER_ID='\"$FIREBASE_MESSAGING_SENDER_ID\"' --define:process.env.FIREBASE_APP_ID='\"$FIREBASE_APP_ID\"' && cp index.html dist/index.html && cp favicon.ico dist/favicon.ico && cp manifest.json dist/manifest.json && cp sw.js dist/sw.js"
+    "build": "esbuild index.tsx --bundle --outfile=dist/bundle.js --define:process.env.NODE_ENV='\"production\"' --define:process.env.EMAILJS_SERVICE_ID='\"$EMAILJS_SERVICE_ID\"' --define:process.env.EMAILJS_TEMPLATE_ID='\"$EMAILJS_TEMPLATE_ID\"' --define:process.env.EMAILJS_PUBLIC_KEY='\"$EMAILJS_PUBLIC_KEY\"' && cp index.html dist/index.html && cp favicon.ico dist/favicon.ico && cp manifest.json dist/manifest.json && cp sw.js dist/sw.js"
   },
   "dependencies": {
     "react": "^19.1.1",
