feat: Update app icons and metadata
Updates the application's favicons and metadata to use new image assets. This includes changing the apple-touch-icon, og:image, and twitter:image to point to a new image URL, and updating the DEFAULT_SITE_IMAGE_URL constant. This aims to improve the application's visual representation in social media shares and as a PWA icon.

--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "description": "La presente aplicación funciona como agenda de reservas para uso de salas de reuniones dentro de las bases de Telecom.",
   "icons": [
     {
-      "src": "https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png",
+      "src": "https://i.postimg.cc/J7QPcyH9/ICONO-APP-RESERVA.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.postimg.cc/Hss2rxB2/IMAGEN-SITE.png",
+      "src": "https://i.postimg.cc/J7QPcyH9/ICONO-APP-RESERVA.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
